--- a/site/index.html
+++ b/site/index.html
@@ -31,6 +31,7 @@
 
         <script src="js/vendor/jquery-1.9.0.min.js"></script>
         <script src="js/plugins.js"></script>
+        <script src="js/munge.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
