+ more complex UI logic: update multiple views

--- a/site/index.html
+++ b/site/index.html
@@ -27,7 +27,8 @@
             <input type="text" name="to-munge" id="to-munge">
             <button type="submit">Munge!</button>
         </form>
-        <div id="content"><span id="munge-result"></span></div>
+        <div><span id="munge-result"></span></div>
+        <div><span id="munge-result2"></span></div>
 
         <script src="js/vendor/jquery-1.9.0.min.js"></script>
         <script src="js/plugins.js"></script>
